[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/Gel_Wells.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/GelDisplay.gd" type="Script" id=2]
[ext_resource path="res://Images/redX.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 197, 17 )

[node name="GelDisplay" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -271.0
margin_right = 225.0
margin_bottom = 268.0

[node name="Gel" type="Sprite" parent="."]
position = Vector2( 1, -2 )
texture = ExtResource( 1 )

[node name="StartPositions" type="Node2D" parent="."]
position = Vector2( -142, -199 )

[node name="Position2D" type="Position2D" parent="StartPositions"]

[node name="Position2D2" type="Position2D" parent="StartPositions"]
position = Vector2( 70, 0 )

[node name="Position2D3" type="Position2D" parent="StartPositions"]
position = Vector2( 140, 0 )

[node name="Position2D4" type="Position2D" parent="StartPositions"]
position = Vector2( 210, 0 )

[node name="Position2D5" type="Position2D" parent="StartPositions"]
position = Vector2( 280, 0 )

[node name="EndPosition" type="Position2D" parent="."]
position = Vector2( -142, 220 )

[node name="BandContainer" type="Node2D" parent="."]
visible = false

[node name="UVLightButton" type="Button" parent="."]
margin_left = -315.0
margin_top = -271.0
margin_right = -230.0
margin_bottom = -209.0
text = "UV Light"

[node name="TopRunoffArea" type="Area2D" parent="."]
position = Vector2( 1, -248 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRunoffArea"]
shape = SubResource( 1 )

[node name="BottomRunoffArea" type="Area2D" parent="."]
position = Vector2( 1, 244 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRunoffArea"]
shape = SubResource( 1 )

[node name="CloseButton" type="TextureButton" parent="."]
visible = false
margin_left = 230.0
margin_top = -268.0
margin_right = 245.0
margin_bottom = -253.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="UVLightButton" to="." method="_on_UVLightButton_pressed"]
[connection signal="body_entered" from="TopRunoffArea" to="." method="_on_TopRunoffArea_body_entered"]
[connection signal="body_entered" from="BottomRunoffArea" to="." method="_on_BottomRunoffArea_body_entered"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
